--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-我的粉丝</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/dialog.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="~/css/dropload.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dropload.css" />
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/dropload.min.js"></script>
