--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -11,9 +11,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>排行榜-搜索专家</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/dialog.css" rel="stylesheet" />
-    <link href="~/css/mescroll.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
+    <link href="@ViewBag.osshost/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
