--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>苹果安装说明</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
 </head>
 
 <body>
