--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Forget.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Forget.cshtml
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>忘记密码-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
 
-    <link href="~/css/dialog.css" rel="stylesheet" />
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
