--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
     <title>@site.Name</title>
     <meta name="keywords" content="@site.KeyWord">
     <meta name="description" content="@site.Description">
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="~/css/c8-icon.css" rel="stylesheet" />
+    <link href="@ViewBag.osshost/css/c8-icon.css" rel="stylesheet" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/runTime3.js"></script>
