--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>彩票计划_彩票开奖计划_彩票预测最准确</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <style>
