--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
@@ -12,10 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>下载页面</title>
     
-    <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
-    <link href="~/css/dialog.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <script src="~/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/down.js"></script>
 
