--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>排行榜_彩票开奖查询_彩票高手排行榜</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
