--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>积分榜</title>
 
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/null.css" rel="stylesheet" />
-    <link href="~/css/dialog.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link href="@ViewBag.osshost/css/null.css" rel="stylesheet" />
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
 
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
