--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -20,9 +20,9 @@
     <title>@Model.FullHead -万彩吧</title>
     <meta name="keywords" content="@newsType.SeoKeyword">
     <meta name="description" content="@newsType.SeoDescription">
-    <link href="~/css/jquery.emoji.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
+    <link href="@ViewBag.osshost/css/jquery.emoji.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/c8-icon.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script src="@ViewBag.osshost/js/luo/jquery.emoji.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
