--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -18,9 +18,9 @@
     <title>@Model.SeoSubject</title>
     <meta name="keywords" content="@Model.SeoKeyword">
     <meta name="description" content="@Model.SeoDescription">
-    <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/c8-icon.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
