--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>粉丝榜</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/dropload.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
-    <link href="~/css/null.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dropload.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link href="@ViewBag.osshost/css/null.css" rel="stylesheet" />
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
 
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
