--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
@@ -12,8 +12,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>我的积分</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <link href="~/css/mescroll.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link href="@ViewBag.osshost/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/MyIntegral.js"></script>
