--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
@@ -11,9 +11,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>我的计划</title>
-    <link rel="stylesheet" type="text/css" href="~/css/mescroll.min.css" />
-    <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/mescroll.min.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/mescroll.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
