--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
@@ -8,9 +8,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-设置-设置昵称</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
-    <link href="~/css/dialog.css" rel="stylesheet" />
+    <link href="@ViewBag.osshost/css/dialog.css" rel="stylesheet" />
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
