--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-赚钱任务</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/zcircleMove.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
