--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
@@ -13,8 +13,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>最新预测-@ViewBag.LTypeName</title>
-    <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
