--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -19,7 +19,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>查看计划-@ViewBag.msg</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css">
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script src="@ViewBag.osshost/js/function.js"></script>
     <script src="@ViewBag.osshost/js/runTime2.js"></script>
