--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -21,10 +21,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>近期竞猜-@ViewBag.LTypeName</title>
-    <link rel="stylesheet" type="text/css" href="~/css/mescroll.min.css" />
-    <link href="~/css/jquery.emoji.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/mescroll.min.css" />
+    <link href="@ViewBag.osshost/css/jquery.emoji.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script src="@ViewBag.osshost/js/luo/jquery.emoji.min.js"></script>
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/TouchSlide.1.1.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/runTime2.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
-    <script src="~/js/6caiSX.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/6caiSX.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/PlayRecord.js"></script>
 
 </head>
