--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Tip.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Tip.cshtml
@@ -15,8 +15,8 @@
     <title>打赏记录</title>
     <meta name="keywords" content="@site.KeyWord">
     <meta name="description" content="@site.Description">
-    <link rel="stylesheet" type="text/css" href="/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
