--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/BasePageLayout.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/BasePageLayout.cshtml
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Language" content="zh-CN"/>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" type="text/css" href="~/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css"/>
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/c8-icon.css"/>
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
 
