--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoom.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoom.cshtml
@@ -8,8 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <title>首页</title>
-    <link rel="stylesheet" href="/css/Chat/base.css" />
-    <link rel="stylesheet" href="/css/Chat/index.css" />
+    <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/base.css" />
+    <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/index.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 <body>
