--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoomWS.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoomWS.cshtml
@@ -10,9 +10,9 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <link rel="stylesheet" href="/css/Chat/libs/CSSRESET.css">
-    <link rel="stylesheet" href="/css/Chat/common.css">
-    <link rel="stylesheet" href="/css/Chat/chat.css">
+    <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/libs/CSSRESET.css">
+    <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/common.css">
+    <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/chat.css">
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 
 
