--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlayRecord.cshtml
@@ -436,7 +436,7 @@
                     var num = item.LotteryNum.Num.split(',');
                     var bethtml = '';
                     var cl1 = "hdM_ddcon";
-                    var dttime=timeStamp2String(item.LotteryNum.SubTime,"yyyy-MM-dd");  
+                    var dttime=timeStamp2String(item.LotteryNum.SubTime,"yyyy-MM-dd");
 
                     if (item.BettingRecord.length > 0)
                     {
@@ -610,9 +610,9 @@
 
 
                     }
-                    var time1= timeStamp2String(item.LotteryNum.SubTime,"MM-dd HH:mm");  
-                
-                  
+                    var time1= timeStamp2String(item.LotteryNum.SubTime,"MM-dd HH:mm");
+
+
                     var itemHtml = '<table class="Forecast_tableA" width="100%" bordercolor="#ccc" border="1"> <tr>'
                         + ' <td align="center" valign="middle"> <p class="Forecast_Ptit">' + item.LotteryNum.Issue + '期</p>'
                         + '    <p class="Forecast_Ptit">' + time1 + '</p> </td>'
@@ -655,9 +655,9 @@
             {
                 return month + "-" + date+" "+hour+":"+minute;
             }
-           
 
-        } 
+
+        }
 
         //生肖
         function get6caiSx(num,subtime)
@@ -668,7 +668,7 @@
                 cainum+=GetName(subtime, num[i]) + ",";
             }
             return cainum.substring(0, cainum.length - 1);
-            
+
         }
 
 
@@ -720,11 +720,11 @@
         function getwanfa(playName)
         {
             var i = -1;
-            var p0 = ["第一球五码", "冠军五码", "第一球", "冠军","第一名"];
-            var p1 = ["第二球五码", "第二名五码", "第二球", "亚军", "第二名", "亚军五码"];
-            var p2 = ["第三球五码", "第三名五码", "第三球", "第三名"];
-            var p3 = ["第四球五码", "第四名五码", "第四球", "第四名"];
-            var p4 = ["第五球五码", "第五名五码", "第五球", "第五名"];
+            var p0 = ["第一球五码", "第一球六码", "冠军五码", "第一球", "冠军", "第一名"];
+            var p1 = ["第二球五码", "第二球六码", "第二名五码", "第二球", "亚军", "第二名", "亚军五码"];
+            var p2 = ["第三球五码", "第三球六码", "第三名五码", "第三球", "第三名"];
+            var p3 = ["第四球五码", "第四球六码", "第四名五码", "第四球", "第四名"];
+            var p4 = ["第五球五码", "第五球六码", "第五名五码", "第五球", "第五名"];
             var p5 = ["第六球五码", "第六名五码", "第六球", "第六名"];
             var p6 = ["第七球五码", "第七名五码", "第七球", "第七名", "十码中特", "二十码中特", "四肖中特", "六肖中特", "蓝5码", "蓝8码"];
             var p7 = ["第八球五码", "第八名五码", "第八球", "第八名"];
