--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -101,10 +101,10 @@
     <div class="info_LHC_category col4">
         <dl>
             <dt><p><span class="spec"></span>香港正版图库</p></dt>
-            <dd><a href="/News/Index/5/111">看图解码</a></dd>
-            <dd><a href="/News/Index/5/112">幸运彩图</a></dd>
-            <dd><a href="/News/Index/5/113">精选彩图</a></dd>
-            <dd><a href="/News/Index/5/114">香港图库</a></dd>
+            <dd><a href="/News/NewIndex/5/111">看图解码</a></dd>
+            <dd><a href="/News/NewIndex/5/112">幸运彩图</a></dd>
+            <dd><a href="/News/NewIndex/5/113">精选彩图</a></dd>
+            <dd><a href="/News/NewIndex/5/114">香港图库</a></dd>
         </dl>
         <div class="clearfix"></div>
     </div>
