--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
@@ -1646,7 +1646,7 @@
                 <tr>
                     <th align="center" valign="middle" scope="row">连中3期</th>
                     <td align="center" valign="middle">+2</td>
-                    <td align="center" valign="middle">&nbsp;</td>
+                    <td align="center" valign="mi52ddle">&nbsp;</td>
                     <td align="center" valign="middle">&nbsp;</td>
                 </tr>
                 <tr>
@@ -1694,12 +1694,12 @@
             <p class="Rule_font1">（十二）第二球  龙虎  规则同上</p>
             <p class="Rule_font1">（十三）第二球  东南西北  规则同上</p>
             <p class="Rule_font1">（十四）第二球  中发白  规则同上</p>
-            <p class="Rule_font1">（十五）总和单双</p>
+            @*<p class="Rule_font1">（十五）总和单双</p>
             <p class="Rule_font2">所有8个开奖号码的数字总和值是单数为总和单，如数字总和值是31，51；所有8个开奖号码的数字总和值是双数为总和双，如数字总和是42，80；假如投注组合符合中奖结果，视为中奖，其余情形视为不中奖。</p>
             <p class="Rule_font1">（十六）总和大小</p>
             <p class="Rule_font2">所有8个开奖号码的数字总和值85到132为总大；所有8个开奖号码的数字总和值36到83为总分小；所有8个开奖号 码的数字总和值为84打和；如开奖号码为01，20，02，08，17，09，11，数字总和是68，则总分小。假如投注组合符合中奖结果，视为中奖，其余情形视为不中奖，打和不计算结果。</p>
             <p class="Rule_font1">（十七）总和尾大小</p>
-            <p class="Rule_font2">所有8个开奖号码的数字总和数值的个位数大于或等于5为总尾大，小于或等于4为总尾小；假如投注组合符合中奖结果，视为中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font2">所有8个开奖号码的数字总和数值的个位数大于或等于5为总尾大，小于或等于4为总尾小；假如投注组合符合中奖结果，视为中奖，其余情形视为不中奖。</p>*@
             <br />
             <h3 class="Rule_title">快乐十分玩法积分规则:</h3>
             <table width="100%" border="1" bordercolor="#999" class="Rule_tableA">
@@ -1793,48 +1793,48 @@
                     <td align="center" valign="middle">-10</td>
                     <td align="center" valign="middle">&nbsp;</td>
                 </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">总和单双</th>
-                    <td align="center" valign="middle">+10</td>
-                    <td align="center" valign="middle">-10</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">总和大小</th>
-                    <td align="center" valign="middle">+10</td>
-                    <td align="center" valign="middle">-10</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">总和尾大小</th>
-                    <td align="center" valign="middle">+10</td>
-                    <td align="center" valign="middle">-10</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                @*<tr>
-                    <th align="center" valign="middle" scope="row">连中2期</th>
-                    <td align="center" valign="middle">+1</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">连中3期</th>
-                    <td align="center" valign="middle">+2</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">连中4期</th>
-                    <td align="center" valign="middle">+3</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>
-                <tr>
-                    <th align="center" valign="middle" scope="row">以此类推</th>
-                    <td align="center" valign="middle">+(N-1)</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                    <td align="center" valign="middle">&nbsp;</td>
-                </tr>*@
+               @* <tr>
+        <th align="center" valign="middle" scope="row">总和单双</th>
+        <td align="center" valign="middle">+10</td>
+        <td align="center" valign="middle">-10</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">总和大小</th>
+        <td align="center" valign="middle">+10</td>
+        <td align="center" valign="middle">-10</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">总和尾大小</th>
+        <td align="center" valign="middle">+10</td>
+        <td align="center" valign="middle">-10</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">连中2期</th>
+        <td align="center" valign="middle">+1</td>
+        <td align="center" valign="middle">&nbsp;</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">连中3期</th>
+        <td align="center" valign="middle">+2</td>
+        <td align="center" valign="middle">&nbsp;</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">连中4期</th>
+        <td align="center" valign="middle">+3</td>
+        <td align="center" valign="middle">&nbsp;</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>
+    <tr>
+        <th align="center" valign="middle" scope="row">以此类推</th>
+        <td align="center" valign="middle">+(N-1)</td>
+        <td align="center" valign="middle">&nbsp;</td>
+        <td align="center" valign="middle">&nbsp;</td>
+    </tr>*@
             </table>
         </div>
     }
