--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Public/Tan.cshtml
@@ -967,6 +967,107 @@
     </ul>
 </div>
 
+<!--弹窗 选择单双、大小、合单双、尾大小、龙虎、东、中-->
+<div id="popup_kl10_5_8" class="C8_TCpopupA" style="margin-top: -184px; display: none;">
+        <div class="C8_Ttitle">
+            <h3>请选择玩法</h3>
+        </div>
+        <div class="C8_Tcontent">
+            <dl class="C8_TcDl">
+                <dt>
+                    <p>选择</p>
+                    <span></span>
+                    <div style="clear: both;"></div>
+                </dt>
+                <dd>
+                    <span class="danContainer">
+                        <span class="C8_Qiu">单</span>
+                        <span class="C8_Qiu">双</span>
+                    </span>
+                    <span class="daxiaoContainer">
+                        <span class="C8_Qiu">大</span>
+                        <span class="C8_Qiu">小</span>
+                    </span>
+                    <div style="clear: both;"></div>
+                </dd>
+            </dl>
+            <dl class="C8_TcDl">
+                <dt>
+                    <p>合单双</p>
+                    <span></span>
+                    <div style="clear: both;"></div>
+                </dt>
+                <dd>
+                    <span class="lastdanContainer">
+                        <span class="C8_Qiu">单</span>
+                        <span class="C8_Qiu">双</span>
+                    </span>
+                    <div style="clear: both;"></div>
+                </dd>
+            </dl>
+            <dl class="C8_TcDl">
+                <dt>
+                    <p>尾大小</p>
+                    <span></span>
+                    <div style="clear: both;"></div>
+                </dt>
+                <dd>
+                    <span class="totaldaxiaoContainer">
+                        <span class="C8_Qiu">大</span>
+                        <span class="C8_Qiu">小</span>
+                    </span>
+                    <div style="clear: both;"></div>
+                </dd>
+            </dl>
+            <dl class="C8_TcDl">
+                <dt>
+                    <p>选择</p>
+                    <span></span>
+                    <div style="clear: both;"></div>
+                </dt>
+                <dd>
+                    <span class="directionContainer">
+                        <span class="C8_Qiu">东</span>
+                        <span class="C8_Qiu">南</span>
+                        <span class="C8_Qiu">西</span>
+                        <span class="C8_Qiu">北</span>
+                    </span>
+                    <div style="clear: both;"></div>
+                </dd>
+            </dl>
+            <dl class="C8_TcDl">
+                <dt>
+                    <p>选择</p>
+                    <span></span>
+                    <div style="clear: both;"></div>
+                </dt>
+                <dd>
+                    <span class="zhongfabaiContainer">
+                        <span class="C8_Qiu">中</span>
+                        <span class="C8_Qiu">发</span>
+                        <span class="C8_Qiu">白</span>
+                    </span>
+                    <div style="clear: both;"></div>
+                </dd>
+            </dl>
+        </div>
+        <ul class="C8_Tbtn">
+            <li class="cancelButton">
+                <a href="javascript:;">
+                    <img src="/images/69_1.png">
+                    <span>取消</span>
+                </a>
+            </li>
+            <li class="confirmButton">
+                <a href="javascript:;">
+                    <img src="/images/69_2.png">
+                    <span>确认</span>
+                </a>
+            </li>
+            <div style="clear: both;"></div>
+        </ul>
+    </div>
+
 <!--弹窗 选择号码 10个号码1-10 、单、大、龙-->
 <div id="popup_dan_da_lh" class="C8_TCpopupA" style="margin-top: -138px; display: none;">
     <div class="C8_Ttitle">
