--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -842,28 +842,28 @@
                         <h3 class="WF_Ttitle">第一球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q1"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q1','popup_kl10','gdkl10f');" data-id="gdkl10f_q1" data-type="popup_kl10" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q1','popup_kl10','gdkl10f');" data-id="gdkl10f_q1" data-type="popup_kl10" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第二球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q2"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q2','popup_kl10','gdkl10f');" data-id="gdkl10f_q2" data-type="popup_kl10" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q2','popup_kl10','gdkl10f');" data-id="gdkl10f_q2" data-type="popup_kl10" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第三球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q3"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q3','popup_kl10','gdkl10f');" data-id="gdkl10f_q3" data-type="popup_kl10" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q3','popup_kl10','gdkl10f');" data-id="gdkl10f_q3" data-type="popup_kl10" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第四球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q4"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q4','popup_kl10','gdkl10f');" data-id="gdkl10f_q4" data-type="popup_kl10" class="WF_Btn" style="padding: 40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q4','popup_kl10','gdkl10f');" data-id="gdkl10f_q4" data-type="popup_kl10" class="WF_Btn">选择号码</a></td>
                 </tr>
 
                 <tr>
@@ -871,28 +871,28 @@
                         <h3 class="WF_Ttitle">第五球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q5"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q5','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q5" data-type="popup_kl10_5_8" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q5','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q5" data-type="popup_kl10_5_8" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第六球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q6"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q6','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q6" data-type="popup_kl10_5_8" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q6','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q6" data-type="popup_kl10_5_8" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第七球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q7"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q7','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q7" data-type="popup_kl10_5_8" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q7','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q7" data-type="popup_kl10_5_8" class="WF_Btn">选择号码</a></td>
                 </tr>
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第八球</h3>
                     </td>
                     <td align="center" valign="middle" class="betContainer" id="gdkl10f_q8"></td>
-                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q8','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q8" data-type="popup_kl10_5_8" class="WF_Btn" style="padding:40px 0;">选择号码</a></td>
+                    <td width="18%" align="center" valign="middle"><a href="javascript:openModule('gdkl10f_q8','popup_kl10_5_8','gdkl10f');" data-id="gdkl10f_q8" data-type="popup_kl10_5_8" class="WF_Btn">选择号码</a></td>
                 </tr>
             </table>
         }
