--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -160,7 +160,7 @@
     </div>
     @Html.Partial("Footer")
 
-    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Open.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/HomeIndex.js"></script>
 
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
