--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
     <div class="hjc_news_lhs">
         <div class="hjc_news_title" style="text-align:left;">
             <span class="icon-fire hjc_news_title_info">精彩资讯</span>
-            <a style="color:#f13131;float:right;" href="/News/Index/2">更多</a>
+            <a style="color:#f13131;float:right;" href="/News/NewIndex/2">更多</a>
         </div>
         @if (newsList != null)
         {
