--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -203,7 +203,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/News/Index/2">
+                    <a href="/News/NewIndex/2">
                         <dl class="cNav_Dl">
                             <dt><img src="/images/grids_icon_07.png"></dt>
                             <dd>
