--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/副本 Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/副本 Index.cshtml
@@ -72,7 +72,7 @@
                 </a>
             </li>
             <li>
-                <a href="/News/Index/2">
+                <a href="/News/NewIndex/2">
                     <i><img src="/images/grids_icon_07.png"></i>
                     <p>资讯</p>
                 </a>
@@ -132,7 +132,7 @@
                 </a>
             </li>
             <li>
-                <a href="/News/Index/2">
+                <a href="/News/NewIndex/2">
                     <i><img src="/images/grids_icon_07.png"></i>
                     <p>资讯</p>
                 </a>
