--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -77,13 +77,13 @@
                 </a>
             </li>
             <li>
-                <a href="/News/Index/5/123">
+                <a href="/News/NewIndex/5/123">
                     <i><img src="/images/icon_info_02.png"></i>
                     <p>挂牌</p>
                 </a>
             </li>
             <li>
-                <a href="/News/Index/5/124">
+                <a href="/News/NewIndex/5/124">
                     <i><img src="/images/icon_info_03.png"></i>
                     <p>跑狗</p>
                 </a>
@@ -211,7 +211,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/News/Index/2">
+                    <a href="/News/NewIndex/2">
                         <dl class="cNav_Dl">
                             <dt><img src="/images/grids_icon_07.png"></dt>
                             <dd>
