--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -516,7 +516,7 @@ function showBall(data) {
                     </a>
                 </li>
                 <li>
-                    <a href="/News/Index/2">
+                    <a href="/News/NewIndex/2">
                         <dl class="cNav_Dl">
                             <dt><img src="/images/grids_icon_07.png"></dt>
                             <dd>
