--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/UserCenter.cshtml
@@ -12,10 +12,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-他人主页</title>
-    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/mescroll.min.css" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
     <link href="@ViewBag.osshost/css/jquery.emoji.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/mescroll.min.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/mescroll.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="/js/luo/personal.usercenter.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/personal.usercenter.js"></script>
 
 </body>
 
