--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
@@ -12,7 +12,9 @@
 </head>
 
 <body>
+    
     <div class="YDY_Box">
+        <h2 class="YDY_Btit2">苹果手机app应用显示未受信任打不开怎么解决?不要慌，简单几个步骤即可！</h2>
         <h3 class="YDY_Btit"><span>1</span><font>当我们点击某个软件在苹果手机桌面上弹出此软件未受信任时的对话框。</font></h3>
         <img src="http://oss.c8.cn/c8/res/img/w15_1.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>2</span><font>这时我们可以点击苹果手机的“设置”图标来进行设置。</font></h3>
@@ -30,7 +32,9 @@
         <h3 class="YDY_Btit"><span>8</span><font>完成上述操作之后，我们重新点击该APP软件，这时我们就会发现能够顺利进入到该软件当中了。</font></h3>
         <img src="http://oss.c8.cn/c8/res/img/w15_8.png" class="YDY_tu" />
     </div>
-
+    <div class="DL_info2" style="margin:30px 10px;">
+        <input type="submit" class="DL_if2btn" value="返回首页">
+    </div>
 
 </body>
 </html>
