--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8842,6 +8842,7 @@ footer {
 .YDY_Btit{ font-weight:normal; line-height:21px; padding:10px 0;}
 .YDY_Btit span{ display:inline-block; width:20px; height:20px; line-height:20px; text-align:center; font-size:12px; color:#fff; background:#f13131; border-radius:50%;}
 .YDY_Btit font{ font-size:14px; margin-left:5px; color:#333;}
+.YDY_Btit2{font-weight: normal;font-size: 15px;padding: 5px 0px;margin-top: 5px;}
 
 
 
