--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -295,7 +295,7 @@
     </div>
     <!--搜索-->
     <div class="Plan_search"><a href="/Plan/ExpertSearch/@lType"></a></div>
-    <script type="text/javascript" src="/js/luo/plan.index.expert.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/plan.index.expert.js"></script>
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
 </html>
