--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -282,7 +282,7 @@
         </div>
 
         @*高手推荐*@
-        <div id="mescroll0" class="Plan_CInfo mescroll" style=" display none;">
+        <div id="mescroll0" class="Plan_CInfo mescroll" style="display: none;">
             <div id="datalist0" class="Plan_CIfBox data-list">
             </div>
         </div>
