--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -138,111 +138,7 @@
 
 
     <!--侧边栏-->
-    <div class="ZX_CLBox">
-        <div class="CLB_YY"></div>
-        <div class="CLB_con">
-            <ul class="CLB_cNav">
-                <!--cNav_current-->
-                <li>
-                    <a href="/Home/Index">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/w6_1.png"></dt>
-                            <dd>
-                                <p>首页</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Home/Open">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/w6_2.png"></dt>
-                            <dd>
-                                <p>开奖</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                @*<li>
-                        <a href="JavaScript:;">
-                            <dl class="cNav_Dl">
-                                <dt><img src="/images/w6_4.png"></dt>
-                                <dd>
-                                    <p>走势</p>
-                                    <img src="/images/w7.png">
-                                    <div style="clear:both;"></div>
-                                </dd>
-                            </dl>
-                        </a>
-                    </li>*@
-                <li>
-                    <a href="/Home/Plan">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/w6_3.png"></dt>
-                            <dd>
-                                <p>计划</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                <li>
-                    <a href="/List/Index">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/grids_icon_04.png"></dt>
-                            <dd>
-                                <p>排行</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Talking/Index">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/w6_5.png"></dt>
-                            <dd>
-                                <p>聊天</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                <li>
-                    <a href="/List/Expert">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/grids_icon_06.png"></dt>
-                            <dd>
-                                <p>高手</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-                <li>
-                    <a href="/News/NewIndex/2">
-                        <dl class="cNav_Dl">
-                            <dt><img src="/images/grids_icon_07.png"></dt>
-                            <dd>
-                                <p>资讯</p>
-                                <img src="/images/w7.png">
-                                <div style="clear:both;"></div>
-                            </dd>
-                        </dl>
-                    </a>
-                </li>
-
-            </ul>
-        </div>
-    </div>
+    @Html.Partial("Sidebar")
 
     <div class="mask" style="display: none;"></div>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Expert.js"></script>
