--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -302,7 +302,7 @@
     </div>
     <!--侧边栏-->
     @Html.Partial("Sidebar")
-    <script src="~/js/kcp/NativeShare.js"></script>
+    <script src="@ViewBag.osshost/js/kcp/NativeShare.js"></script>
     <script type="text/javascript">
         $(function () {
             $(".Gues_ul").parseEmoji();
